# deriv-technical-challenge

./: .env.example  .gitignore  check_gapgpt.py  product_brief.json  pyproject.toml
docs/: PHASES.md  TASK_DOC.md
output/: approved_rubric.json  compliance_audit.json  copy_variants.json  recommendation.md  variant_scores.json
src/deriv/: main.py
src/deriv/core/: config.py
src/deriv/engine/: graph.py  llm.py  nodes.py  schemas.py  state.py
tests/: test_config.py  test_phase1_skeleton.py
