[project]
name = "deriv"
version = "0.1.0"
description = "A sophisticated Agentic AI framework built with PydanticAI and FastAPI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "openai>=2.35.1",
    "pydantic>=2.13.4",
    "pydantic-ai>=1.91.0",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.46.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
ignore = ["D100", "D104"]

[tool.ruff.lint.isort]
known-first-party = ["deriv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
